--- a/application/views/adicionar.html
+++ b/application/views/adicionar.html
@@ -1,23 +1,3 @@
-<!--
-	{if isset($erro)}
-		<p>{$erro}</p>
-	{/if}
-				<td><label for="">Título</label></td>
-				<td><input type="text" name="titulo"></td>
-			</tr>
-			<tr>
-				<td><label for="">Corpo</label></td>
-				<td><textarea name="corpo"></textarea></td>
-			</tr>
-			<tr>
-				<td><label for="">Imagem</label></td>
-				<td><input type="file" name="image"></td>
-			</tr>
-			<tr>
-				<td><input type="submit" value="Adicionar"></td>
-				<td><a href="javascript(history.back());">Cancelar</a></td>
-			</tr>
--->
 <div class="container">
 	<div class="page-header">
 		<h1>Notícias</h1>
@@ -50,6 +30,7 @@
             <label for="f_corpo" class="col-sm-2 control-label">Imagem</label>
             <div class="col-sm-10">
                 <input type="file" class="form-control" id="f_imagem" name="imagem">
+                <p class="help-block">Resolução ideal 1140x360</p>
             </div>
         </div>
         <div class="form-group">
