--- a/application/views/editar.html
+++ b/application/views/editar.html
@@ -49,6 +49,7 @@
             <label for="f_corpo" class="col-sm-2 control-label">Imagem</label>
             <div class="col-sm-10">
                 <input type="file" class="form-control" id="f_imagem" name="imagem">
+                <p class="help-block">Resolução ideal 1140x360</p>
             </div>
         </div>
         <div class="form-group">
